SECURITYGROUP.tf
# Security Group for Nginx
resource "aws_security_group" "nginxSG" {
  vpc_id = aws_vpc.my_vpc.id

  # Inbound rule for HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound rule
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "nginxSG"
  }
}
